--- a/Homework2/ashih/index.css
+++ b/Homework2/ashih/index.css
@@ -7,6 +7,7 @@
 html {
     width: 100%;
     height: 100%;
+    overflow: hidden;
 }
 
 body {
@@ -35,10 +36,14 @@ svg {
 .map-container {
     width: 60%;
     height: 100%;
-    background-color: bisque;
+    border-right: solid 1px black;
 }
 
 .histogram-container, .parallel-container {
     height: 50%;
+    padding: 24px;
+}
+
+.histogram-container {
     border-bottom: solid 1px black;
 }
